// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@graphql-box/debug-manager >> CacheManager >> CACHE_ENTRY_ADDED >> correct data emitted 1`] = `
Array [
  Object {
    "cacheType": "queryResponses",
    "cachemapOptions": Object {
      "cacheHeaders": Object {
        "cacheControl": "public, max-age=5",
      },
      "tag": undefined,
    },
    "context": Object {
      "fieldTypeMap": Map {
        "query.organization" => Object {
          "directives": Object {
            "inherited": Array [],
            "own": Array [],
          },
          "hasArguments": true,
          "hasDirectives": false,
          "isEntity": true,
          "isInterface": false,
          "isUnion": false,
          "possibleTypes": Array [],
          "typeIDValue": undefined,
          "typeName": "Organization",
        },
      },
      "fragmentDefinitions": undefined,
      "hasDeferOrStream": false,
      "operation": "query",
      "operationName": "",
      "queryFiltered": false,
      "request": "",
      "typeIDKey": "id",
      "whitelistHash": "",
    },
    "debuggerName": "CLIENT",
    "environment": "client",
    "hash": "ea1cbc58eca798225b53f59d95ffb23a",
    "logGroup": 2,
    "logOrder": 7,
    "options": Object {
      "awaitDataCaching": true,
    },
    "requestID": "123456789",
    "stats": Object {
      "duration": 0,
      "endTime": 0,
      "startTime": 0,
    },
    "timestamp": 0,
    "value": Object {
      "cacheMetadata": Object {
        "query": Object {
          "cacheControl": Object {
            "maxAge": 5,
            "public": true,
          },
          "etag": undefined,
          "ttl": 297475205000,
        },
        "query.organization": Object {
          "cacheControl": Object {
            "maxAge": 5,
            "public": true,
          },
          "etag": undefined,
          "ttl": 297475205000,
        },
      },
      "data": Object {
        "organization": Object {
          "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
          "email": "",
          "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
          "login": "facebook",
          "name": "Facebook",
          "url": "https://github.com/facebook",
        },
      },
    },
  },
  Object {
    "cacheType": "requestFieldPaths",
    "cachemapOptions": Object {
      "cacheHeaders": Object {
        "cacheControl": "public, max-age=5",
      },
      "tag": undefined,
    },
    "context": Object {
      "fieldTypeMap": Map {
        "query.organization" => Object {
          "directives": Object {
            "inherited": Array [],
            "own": Array [],
          },
          "hasArguments": true,
          "hasDirectives": false,
          "isEntity": true,
          "isInterface": false,
          "isUnion": false,
          "possibleTypes": Array [],
          "typeIDValue": undefined,
          "typeName": "Organization",
        },
      },
      "fragmentDefinitions": undefined,
      "hasDeferOrStream": false,
      "operation": "query",
      "operationName": "",
      "queryFiltered": false,
      "request": "",
      "typeIDKey": "id",
      "whitelistHash": "",
    },
    "debuggerName": "CLIENT",
    "decryptedCacheKey": "organization({\\"login\\":\\"facebook\\"})",
    "environment": "client",
    "hash": "5256db516a2438a7e5488a00413f4809",
    "logGroup": 2,
    "logOrder": 7,
    "options": Object {
      "awaitDataCaching": true,
    },
    "requestID": "123456789",
    "stats": Object {
      "duration": 0,
      "endTime": 0,
      "startTime": 0,
    },
    "timestamp": 0,
    "value": Object {
      "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
      "email": "",
      "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "login": "facebook",
      "name": "Facebook",
      "url": "https://github.com/facebook",
    },
  },
  Object {
    "cacheType": "dataEntities",
    "cachemapOptions": Object {
      "cacheHeaders": Object {
        "cacheControl": "public, max-age=5",
      },
      "tag": undefined,
    },
    "context": Object {
      "fieldTypeMap": Map {
        "query.organization" => Object {
          "directives": Object {
            "inherited": Array [],
            "own": Array [],
          },
          "hasArguments": true,
          "hasDirectives": false,
          "isEntity": true,
          "isInterface": false,
          "isUnion": false,
          "possibleTypes": Array [],
          "typeIDValue": undefined,
          "typeName": "Organization",
        },
      },
      "fragmentDefinitions": undefined,
      "hasDeferOrStream": false,
      "operation": "query",
      "operationName": "",
      "queryFiltered": false,
      "request": "",
      "typeIDKey": "id",
      "whitelistHash": "",
    },
    "debuggerName": "CLIENT",
    "environment": "client",
    "hash": "Organization::MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
    "logGroup": 2,
    "logOrder": 7,
    "options": Object {
      "awaitDataCaching": true,
    },
    "requestID": "123456789",
    "stats": Object {
      "duration": 0,
      "endTime": 0,
      "startTime": 0,
    },
    "timestamp": 0,
    "value": Object {
      "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
      "email": "",
      "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "login": "facebook",
      "name": "Facebook",
      "url": "https://github.com/facebook",
    },
  },
]
`;

exports[`@graphql-box/debug-manager >> CacheManager >> CACHE_ENTRY_QUERIED >> correct data emitted 1`] = `
Array [
  Object {
    "cacheType": "requestFieldPaths",
    "context": Object {
      "fieldTypeMap": Map {
        "query.organization" => Object {
          "directives": Object {
            "inherited": Array [],
            "own": Array [],
          },
          "hasArguments": true,
          "hasDirectives": false,
          "isEntity": true,
          "isInterface": false,
          "isUnion": false,
          "possibleTypes": Array [],
          "typeIDValue": undefined,
          "typeName": "Organization",
        },
      },
      "fragmentDefinitions": undefined,
      "hasDeferOrStream": false,
      "operation": "query",
      "operationName": "",
      "queryFiltered": false,
      "request": "",
      "typeIDKey": "id",
      "whitelistHash": "",
    },
    "debuggerName": "CLIENT",
    "decryptedCacheKey": "organization({\\"login\\":\\"facebook\\"})",
    "environment": "client",
    "hash": "5256db516a2438a7e5488a00413f4809",
    "logGroup": 2,
    "logOrder": 3,
    "options": Object {
      "awaitDataCaching": true,
    },
    "requestID": "123456789",
    "result": Object {
      "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
      "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "login": "facebook",
    },
    "stats": Object {
      "duration": 0,
      "endTime": 0,
      "startTime": 0,
    },
    "timestamp": 0,
  },
  Object {
    "cacheType": "dataEntities",
    "context": Object {
      "fieldTypeMap": Map {
        "query.organization" => Object {
          "directives": Object {
            "inherited": Array [],
            "own": Array [],
          },
          "hasArguments": true,
          "hasDirectives": false,
          "isEntity": true,
          "isInterface": false,
          "isUnion": false,
          "possibleTypes": Array [],
          "typeIDValue": undefined,
          "typeName": "Organization",
        },
      },
      "fragmentDefinitions": undefined,
      "hasDeferOrStream": false,
      "operation": "query",
      "operationName": "",
      "queryFiltered": false,
      "request": "",
      "typeIDKey": "id",
      "whitelistHash": "",
    },
    "debuggerName": "CLIENT",
    "environment": "client",
    "hash": "Organization::MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
    "logGroup": 2,
    "logOrder": 3,
    "options": Object {
      "awaitDataCaching": true,
    },
    "requestID": "123456789",
    "result": Object {
      "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
      "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "login": "facebook",
    },
    "stats": Object {
      "duration": 0,
      "endTime": 0,
      "startTime": 0,
    },
    "timestamp": 0,
  },
]
`;
